# You must change these to your own details.
[package]
name = "perlin-noise-wasm"
description = "Perlin noise implemented with Rust and compiled to WebAssembly."
version = "0.1.0"
authors = ["Gabriel Britain <quontas@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
# This makes the compiled code faster, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true 
codegen-units = 1
opt-level = 3   
panic = 'abort'


[profile.release]
# This makes the compiled code faster, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true 
codegen-units = 1
opt-level = 3   
panic = 'abort'

[features]
# If you uncomment this line, it will enable `wee_alloc`:
# default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  'console',
  'ImageData',
  'CanvasRenderingContext2d',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"